--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "amqp": "^0.2.7",
+    "amqplib": "^0.10.4",
+    "body-parser": "^1.20.3",
     "express": "^4.21.1"
   }
 }
