--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -3,6 +3,9 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.7",
-    "@mui/material": "^6.1.7"
+    "@mui/material": "^6.1.7",
+    "amqplib": "^0.10.4",
+    "express": "^4.21.1",
+    "ws": "^8.18.0"
   }
 }
