--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -13,8 +13,10 @@
     "amqp": "^0.2.7",
     "amqplib": "^0.10.4",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "ioredis": "^5.4.1",
+    "nodemon": "^3.1.7",
     "redis": "^4.7.0",
     "socket.io": "^4.8.1",
     "ws": "^8.18.0"
