--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -5,6 +5,7 @@
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
     "amqplib": "^0.10.4",
+    "axios": "^1.7.7",
     "express": "^4.21.1",
     "ws": "^8.18.0"
   }
