--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "backend",
+  "name": "project",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,15 +10,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "amqp": "^0.2.7",
-    "amqplib": "^0.10.4",
-    "body-parser": "^1.20.3",
+    "@google-cloud/firestore": "^7.10.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "ioredis": "^5.4.1",
+    "express-validator": "^7.2.0",
+    "firebase": "^11.0.2",
+    "firebase-admin": "^13.0.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
-    "redis": "^4.7.0",
-    "socket.io": "^4.8.1",
-    "ws": "^8.18.0"
+    "uuid": "^11.0.3"
   }
 }
