--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -1,24 +1,10 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "amqp": "^0.2.7",
-    "amqplib": "^0.10.4",
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
+    "bcrypt": "^5.1.1",
     "express": "^4.21.1",
-    "ioredis": "^5.4.1",
-    "nodemon": "^3.1.7",
-    "redis": "^4.7.0",
-    "socket.io": "^4.8.1",
-    "ws": "^8.18.0"
+    "express-validator": "^7.2.0",
+    "firebase-admin": "^13.0.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16"
   }
 }
