--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -19,6 +19,7 @@
     "firebase-admin": "^13.0.1",
     "firestore": "^1.1.6",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "uuid": "^11.0.3"
   }
