--- a/sg-frontend/package.json
+++ b/sg-frontend/package.json
@@ -20,6 +20,7 @@
     "react-slick": "^0.30.2",
     "reactstrap": "^9.2.3",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
