--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "@google-cloud/firestore": "^7.10.0",
+    "@google-cloud/storage": "^7.14.0",
+    "amqplib": "^0.10.5",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
