--- a/sg-frontend/react-deployment.yaml
+++ b/sg-frontend/react-deployment.yaml
@@ -16,6 +16,11 @@ spec:
     spec:
       containers:
         - name: react-app
-          image: davi1493/react-app:latest
+          image: gcr.io/unified-freedom-443118-s0/react-app:latest
           ports:
             - containerPort: 80
+          env:
+            - name: NODE_CHAT_SERVICE
+              value: "ws://websocket-service.default.svc.cluster.local:3011"
+            - name: NODE_APP_SERVICE
+              value: "http://app-service.default.svc.cluster.local:3010"
