--- a/node-backend/k8s files/Dockerfile-app
+++ b/node-backend/k8s files/Dockerfile-app
@@ -12,7 +12,7 @@ RUN npm install
 COPY . .
 
 # Expose port
-EXPOSE 3004
+EXPOSE 3010
 
 # Start application
-CMD ["node", "chat-service.mjs"]
+CMD ["node", "app.js"]
