--- a/sg-frontend/Dockerfile
+++ b/sg-frontend/Dockerfile
@@ -1,22 +1,28 @@
-# Use an official Node.js runtime as a parent image
+# Stage 1: Build the React app
 FROM node:18 as build
 
 # Set the working directory
 WORKDIR /app
 
-# Copy package.json and install dependencies
+# Copy package.json and package-lock.json to install dependencies
 COPY package.json package-lock.json ./
-RUN npm install
+RUN npm ci
 
-# Copy the rest of the application code and build the app
+# Copy the rest of the application code
 COPY . .
+
+# Build the React application
 RUN npm run build
 
-# Use an Nginx image to serve the static files
-FROM nginx:alpine
+# Stage 2: Serve the React app with Nginx
+FROM nginx:stable
+
+# Remove default Nginx HTML files and add React app build output
+RUN rm -rf /usr/share/nginx/html/*
 COPY --from=build /app/build /usr/share/nginx/html
 
-# Expose the port on which the app will run
+# Expose the default Nginx port
 EXPOSE 80
 
+# Use Nginx as the entrypoint
 CMD ["nginx", "-g", "daemon off;"]
