--- a/node-backend/node-app-deployment.yaml
+++ b/node-backend/node-app-deployment.yaml
@@ -24,3 +24,5 @@ spec:
               value: "redis"
             - name: REDIS_PORT
               value: "6379"
+            - name: RABBIT_MQ
+              value: "amqp://darshan:darshan@35.185.24.216:5672/"
