--- a/redis/redis-service.yaml
+++ b/redis/redis-service.yaml
@@ -1,15 +1,14 @@
 apiVersion: v1
 kind: Service
-metadata: 
+metadata:
   name: redis
   labels:
     app: redis
 spec:
+  type: LoadBalancer
+  selector:
+    app: redis
   ports:
     - protocol: "TCP"
       port: 6379
       targetPort: 6379
-      nodePort: 30079  # Choose any port within the range 30000-32767
-  selector:
-    app: redis
-  type: NodePort
