--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
+    "sharp": "^0.33.5",
     "socket": "^0.14.29",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.3"
